--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -128,6 +128,24 @@
     <Filter Include="Project Files\Structural\Spatial\Positional\API">
       <UniqueIdentifier>{88e145df-23c3-49bb-85b4-09610e1d0673}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Project Files\Engine\Loaders">
+      <UniqueIdentifier>{7e1be29c-a9ee-4395-8c2d-92b68deff9cc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Loaders\API">
+      <UniqueIdentifier>{3e3c2806-9069-48c9-a699-df15f321d97b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Loaders\Specific">
+      <UniqueIdentifier>{2c3e3fd1-5462-4339-9133-11359e5c112a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Loaders\Specific\UserInterface">
+      <UniqueIdentifier>{54a17487-7781-45ad-b4c2-b736ff183f1a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Loaders\Specific\UserInterface\Text">
+      <UniqueIdentifier>{3e9c5544-9311-42b0-9583-76be763b9834}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Loaders\Specific\UserInterface\Text\API">
+      <UniqueIdentifier>{8d0711ed-5566-4d74-a94f-9865653071fd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Structural\Scene\GrandScene.cpp">
@@ -256,6 +274,15 @@
     </ClCompile>
     <ClCompile Include="UserInterface\Text\FontFace.cpp">
       <Filter>Project Files\UserInterface\Text</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Loaders\AssetLoader.cpp">
+      <Filter>Project Files\Engine\Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Loaders\Specific\UserInterface\Text\FontFaceAssetLoader.cpp">
+      <Filter>Project Files\Engine\Loaders\Specific\UserInterface\Text</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Loaders\Specific\UserInterface\Text\FontFaceLoader.cpp">
+      <Filter>Project Files\Engine\Loaders\Specific\UserInterface\Text</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -445,6 +472,15 @@
     </ClInclude>
     <ClInclude Include="UserInterface\Text\FontFace.h">
       <Filter>Project Files\UserInterface\Text\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Loaders\AssetLoader.h">
+      <Filter>Project Files\Engine\Loaders\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Loaders\Specific\UserInterface\Text\FontFaceAssetLoader.h">
+      <Filter>Project Files\Engine\Loaders\Specific\UserInterface\Text\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Loaders\Specific\UserInterface\Text\FontFaceLoader.h">
+      <Filter>Project Files\Engine\Loaders\Specific\UserInterface\Text\API</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
