--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
@@ -143,7 +143,7 @@
     <ClInclude Include="Object\Asserts\SystemNullReference.hpp">
       <Filter>Project Files\Object\Asserts</Filter>
     </ClInclude>
-    <ClInclude Include="Object\Asserts\FileOpenAssert.hpp">
+    <ClInclude Include="Object\Asserts\FileOpenException.hpp">
       <Filter>Project Files\Object\Asserts</Filter>
     </ClInclude>
     <ClInclude Include="Structural\FObservableVector2D.h">
