--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="Structural\Spatial\Collision\CollisionDectectionUpdate.h" />
     <ClInclude Include="Structural\Spatial\Collision\CollisionQuery.h" />
     <ClInclude Include="Structural\Spatial\Positional\Transform.h" />
+    <ClInclude Include="Structural\Spatial\Positional\TransformChangedEventArguments.h" />
     <ClInclude Include="UserInterface\Text\FontFace.h" />
     <ClInclude Include="UserInterface\Text\FontFaceAsset.h" />
     <ClInclude Include="UserInterface\Text\FontFaceRenderPacketParameters.hpp" />
