[#62] Sprite now uses Render Packet
One step closer to uniform Rendering!

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Engine\Graphics\SimpleRenderPacket.h" />
     <ClInclude Include="Engine\Graphics\SplitTexture.h" />
     <ClInclude Include="Engine\Graphics\SplitTextureAsset.h" />
+    <ClInclude Include="Engine\Graphics\SplitTextureRenderPacketParameters.hpp" />
     <ClInclude Include="Engine\Graphics\SuperTexture.h" />
     <ClInclude Include="Engine\Graphics\Technique\CircleDrawableTechnique.h" />
     <ClInclude Include="Engine\Graphics\Technique\DrawableTechnique.h" />
