[#19] You can now destroy a GameObject.
Ensured it does clean up on loading/destruction.
Also you can react to the destruction on a GameObject level.
Checked for leaks with a loop appears fit for purpose.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Engine\Content\ContentManager.h" />
     <ClInclude Include="Engine\Global\PackageRuntimeDifference.h" />
     <ClInclude Include="Engine\Graphics\CacheableRender.h" />
+    <ClInclude Include="Engine\Graphics\EmptyTexture.hpp" />
     <ClInclude Include="Engine\Graphics\RenderPacket.h" />
     <ClInclude Include="Engine\Graphics\SimpleRenderPacket.h" />
     <ClInclude Include="Engine\Graphics\SplitTexture.h" />
