--- a/SuperGameEngine/FatedQuest.Libraries/BinaryOperations/BinaryOperations.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/BinaryOperations/BinaryOperations.vcxproj.filters
@@ -25,12 +25,18 @@
     <ClInclude Include="BinaryFile\BinaryString.h">
       <Filter>Project Files\BinaryFile\API</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryFile\BinaryInt.h">
+      <Filter>Project Files\BinaryFile\API</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BinaryFile\StandardBinaryFile.cpp">
       <Filter>Project Files\BinaryFile</Filter>
     </ClCompile>
     <ClCompile Include="BinaryFile\BinaryString.cpp">
+      <Filter>Project Files\BinaryFile</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryFile\BinaryInt.cpp">
       <Filter>Project Files\BinaryFile</Filter>
     </ClCompile>
   </ItemGroup>
