--- a/SuperGameEngine/FatedQuest.Libraries/BinaryOperationsTests/BinaryOperationsTests.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/BinaryOperationsTests/BinaryOperationsTests.vcxproj.filters
@@ -28,5 +28,8 @@
     <ClCompile Include="BinaryFile\BinaryStringTest.cpp">
       <Filter>Project Files\BinaryFile</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryFile\BinaryIntTest.cpp">
+      <Filter>Project Files\BinaryFile</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
