[#73] Added ability to create GameComponents from external project.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="Structural\Components\Spatial\TransformComponent.h" />
     <ClInclude Include="Structural\Components\Visual\SpriteComponent.h" />
     <ClInclude Include="Structural\Components\Visual\TextComponent.h" />
+    <ClInclude Include="Structural\GameObject\ComponentFactory.h" />
     <ClInclude Include="Structural\GameObject\GameComponent.h" />
     <ClInclude Include="Structural\GameObject\GameObject.h" />
     <ClInclude Include="Structural\GameObject\TestComponent.h" />
@@ -240,6 +241,7 @@
     <ClCompile Include="Structural\Components\Spatial\TransformComponent.cpp" />
     <ClCompile Include="Structural\Components\Visual\SpriteComponent.cpp" />
     <ClCompile Include="Structural\Components\Visual\TextComponent.cpp" />
+    <ClCompile Include="Structural\GameObject\ComponentFactory.cpp" />
     <ClCompile Include="Structural\GameObject\GameComponent.cpp" />
     <ClCompile Include="Structural\GameObject\GameObject.cpp" />
     <ClCompile Include="Structural\GameObject\TestComponent.cpp" />
